Add #init specs, write neovim setup for travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+before_install:
+  - sudo add-apt-repository ppa:neovim-ppa/unstable
+  - sudo apt-get update
+  - sudo apt-get install neovim
+
 language: ruby
 rvm:
   - 2.2.2
