--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 before_install:
-  - sudo add-apt-repository ppa:neovim-ppa/unstable
+  - sudo add-apt-repository ppa:neovim-ppa/unstable -y
   - sudo apt-get update
   - sudo apt-get install neovim
 
