--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
-before_install:
-  - sudo add-apt-repository ppa:neovim-ppa/unstable -y
-  - sudo apt-get update
-  - sudo apt-get install neovim
-
+before_install: |
+  git clone https://github.com/Shougo/vimproc.vim
+  cd vimproc.vim
+  make
 language: ruby
 rvm:
   - 2.2.2
+sudo: false
+cache: bundler
+addons:
+  apt:
+    packages:
+      - vim-gtk
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 script: rake ci
