--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 before_install: |
+  sudo apt-get install silversearcher-ag
   git clone https://github.com/thinca/vim-prettyprint.git
   git clone https://github.com/Shougo/vimproc.vim
   cd vimproc.vim
@@ -13,7 +14,6 @@ addons:
   apt:
     packages:
       - vim-gtk
-      - silversearcher-ag
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
