--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,25 @@ sudo: required
 dist: trusty
 os:
   - linux
-before_install: |
-  # sudo apt-get install silversearcher-ag
-  bash ./install_dependencies.sh
+
 language: ruby
 rvm:
   - 2.2.2
 cache: bundler
+
+install:
+  - bash .ci/install_dependencies.sh
+
 addons:
   apt:
     packages:
       - vim-gtk
       - silversearcher-ag
       - ack-grep
+
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+
 script: rake ci
