--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,6 @@ cache:
   directories:
     - $HOME/.rvm
 
-install:
-  - bash install_dependencies.sh
-  - bundle install
-
 addons:
   apt:
     packages:
@@ -24,9 +20,16 @@ addons:
       - silversearcher-ag
       - ack-grep
 
+install:
+  - bash install_dependencies.sh
+  - bundle install
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update                     ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ack                ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install the_silver_searcher; fi
+
 before_script:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then DISPLAY=:99.0 sh -e /etc/init.d/xvfb start; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok ) & fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then DISPLAY=:99.0 sh -e /etc/init.d/xvfb start; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok ) & fi
   - sleep 3 # give xvfb some time to start
 
 script: rake ci
