--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install the_silver_searcher; fi
 
 before_script:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then DISPLAY=:99.0 sh -e /etc/init.d/xvfb start; fi
+  - "export DISPLAY=:99.0"
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sh -e /etc/init.d/xvfb start; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok ) & fi
   - sleep 3 # give xvfb some time to start
 
