--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,9 @@ addons:
 install:
   - bash install_dependencies.sh
   - bundle install
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update                     ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ack                ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install macvim --with-client-server; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ack; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install the_silver_searcher; fi
 
 before_script:
