extract travis commands to .ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,22 +13,11 @@ cache:
   directories:
     - $HOME/.rvm
 
-addons:
-  apt:
-    packages:
-      - vim-gtk
-      - ack-grep
-      - silversearcher-ag
-
 install:
   - bash install_dependencies.sh
   - bundle install
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install macvim --with-client-server; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ack; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install the_silver_searcher; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install the_platinum_searcher; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ripgrep; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then bash .ci/install_osx.sh; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then bash .ci/install_linux.sh; fi
 
 before_script:
   - "export DISPLAY=:99.0"
