--- a/.travis.yml
+++ b/.travis.yml
@@ -13,18 +13,8 @@ cache:
   directories:
     - $HOME/.rvm
 
-before_script:
-  - bash install_dependencies.sh
-  - bundle install
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then bash .ci/install_osx.sh; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then bash .ci/install_linux.sh; fi
-  - "export DISPLAY=:99.0"
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sh -e /etc/init.d/xvfb start; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok ) & fi
-  - sleep 3 # give xvfb some time to start
-
 jobs:
   include:
-    - script: rake ci_system
-    - script: rake ci_vim8
-    - script: rake ci_vimproc
+    - script: bash .ci/before_script.sh && rake ci_system
+    - script: bash .ci/before_script.sh && rake ci_vim8
+    - script: bash .ci/before_script.sh && rake ci_vimproc
