--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ os:
   - linux
   # - osx
 
+env:
+  - DISPLAY=":99.0"
+
 language: ruby
 rvm:
   - 2.2.2
@@ -13,14 +16,8 @@ cache:
   directories:
     - $HOME/.rvm
 
-before_script:
-  - bash install_dependencies.sh
-  - bundle install
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then bash .ci/install_osx.sh; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then bash .ci/install_linux.sh; fi
-  - "export DISPLAY=:99.0"
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sh -e /etc/init.d/xvfb start; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok ) & fi
-  - sleep 3 # give xvfb some time to start
-
-script: rake ci
+jobs:
+  include:
+    - script: bash .ci/before_script.sh && rake ci_system
+    - script: bash .ci/before_script.sh && rake ci_vim8
+    - script: bash .ci/before_script.sh && rake ci_vimproc
