--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 sudo: required
-dist: trusty
+language: ruby
 os:
   - linux
-  # - osx
+dist: xenial
+services:
+  - xvfb
 
-env:
-  - DISPLAY=":99.0"
-
-language: ruby
-rvm:
-  - 2.2.2
-
+env: DISPLAY=":99.0"
+rvm: 2.2.2
 cache:
   bundler: true
   directories:
@@ -19,5 +16,8 @@ cache:
 jobs:
   include:
     - script: bash .ci/before_script.sh && rake ci_system
+      env: ESEARCH_BACKEND=system
     - script: bash .ci/before_script.sh && rake ci_vim8
+      env: ESEARCH_BACKEND=vim8
     - script: bash .ci/before_script.sh && rake ci_vimproc
+      env: ESEARCH_BACKEND=vimproc
