--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,8 @@ cache:
 jobs:
   include:
     - script: bash .ci/before_script.sh && rake ci_system
+      env: ESEARCH_BACKEND=system
     - script: bash .ci/before_script.sh && rake ci_vim8
+      env: ESEARCH_BACKEND=vim8
     - script: bash .ci/before_script.sh && rake ci_vimproc
+      env: ESEARCH_BACKEND=vimproc
