add rvm osx workaround

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ env: DISPLAY=":99.0"
 # https://docs.travis-ci.com/user/reference/osx/#ruby-versionsimplementations
 # https://docs.travis-ci.com/user/reference/xenial/#ruby-support
 rvm: 2.2.5
+before_install:
+  - rvm get stable --auto-dotfiles
+  - rvm install 2.2.5
 language: ruby
 
 cache:
