--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ env: DISPLAY=":99.0"
 # https://docs.travis-ci.com/user/reference/xenial/#ruby-support
 rvm: 2.2.5
 # Workaround: https://github.com/travis-ci/travis-ci/issues/5361
-before_install:
-  - rvm get stable --auto-dotfiles
-  - rvm install 2.2.5
+# before_install:
+#   - rvm get stable --auto-dotfiles
+#   - rvm install 2.2.5
 language: ruby
 
 cache:
