--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,12 @@ cache:
   bundler: true
   directories:
     - $HOME/.rvm
+# https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
+before_cache:
+  - which brew && brew cleanup
+cache:
+  directories:
+    - $HOME/Library/Caches/Homebrew
 jobs:
   include:
     - script: bash .ci/before_script.sh && rake ci_system
