--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,13 @@ before_cache:
 
 jobs:
   include:
-    - script: travis_wait 30 bash .ci/before_script.sh && rspec --tag system
+    - script: bash .ci/before_script.sh && rspec --tag system
       name: 'Test #backend#system'
       os: osx
-    - script: travis_wait 30 bash .ci/before_script.sh && rspec --tag vim8
+    - script: bash .ci/before_script.sh && rspec --tag vim8
       name: 'Test #backend#vim8'
       os: osx
-    - script: travis_wait 30 bash .ci/before_script.sh && rspec --tag vimproc
+    - script: bash .ci/before_script.sh && rspec --tag vimproc
       name: 'Test #backend#vimproc'
       os: osx
 
