--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,13 @@ before_cache:
 jobs:
   include:
     - name: 'Test #backend#system'
-      script: bash .ci/before_script.sh && bundle exec rspec --tag system
+      script: travis_wait 60 bash .ci/before_script.sh && bundle exec rspec --tag system
       os: osx
     - name: 'Test #backend#vim8'
-      script: bash .ci/before_script.sh && bundle exec rspec --tag vim8
+      script: travis_wait 60 bash .ci/before_script.sh && bundle exec rspec --tag vim8
       os: osx
     - name: 'Test #backend#vimproc'
-      script: bash .ci/before_script.sh && bundle exec rspec --tag vimproc
+      script: travis_wait 60 bash .ci/before_script.sh && bundle exec rspec --tag vimproc
       os: osx
 
     - name: 'Test #backend#system'
