--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ cache:
 before_cache:
   - which brew && brew cleanup # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
 
-before_script:
+before_install:
   - >
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       travis_wait 60 bash .ci/before_script.sh
