--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,17 @@ cache:
 before_cache:
   - which brew && brew cleanup # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
 
-before_install:
+install:
   - >
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       travis_wait 60 bash .ci/before_script.sh
     else
       bash .ci/before_script.sh
     fi
+
+after_failure:
+  - env
+  - ls -lah /usr/local/bin
 
 jobs:
   include:
