move everything from before_script to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,26 @@ before_cache:
 
 install:
   - >
-    bash .ci/before_script.sh
+    bash .ci/install_vim_dependencies.sh
+    bundle install
+
+    if [ "$TRAVIS_OS_NAME" = "osx" ]; then
+      sh .ci/install_osx.sh
+      mvim --version
+    else
+      sh .ci/install_linux.sh
+      vim --version
+    fi
+    ack --version
+    ag --version
+    git --version
+    grep --version
+    pt --version
+    rg --version
+
+before_script:
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then (( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok) &); sleep 5; fi
+  # - if [ "$TRAVIS_OS_NAME" = "linux" ]; then DISPLAY=":99.0" sh -e /etc/init.d/xvfb start; sleep 5 fi 
 
 after_failure:
   - env
