fix macos version in brew install

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_cache:
 
 install:
   - >
-    bash .ci/install_vim_dependencies.sh
+    sh .ci/install_vim_dependencies.sh
     bundle install
 
     if [ "$TRAVIS_OS_NAME" = "osx" ]; then
