--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,14 @@ cache:
     # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
     - $HOME/Library/Caches/Homebrew
     - /usr/local/Homebrew
-    # - /usr/local/Cellar/pcre2
-    # - /usr/local/Cellar/git
+
+    - /usr/local/Cellar/python # /3.7.5   # 120.2MB, built in 3 minutes 43 seconds
+    - /usr/local/Cellar/ruby   # /2.6.5   # 31.1MB, built in 5 minutes 27 seconds
+    - /usr/local/Cellar/sqlite # /3.30.1  # 3.9MB, built in 1 minute 17 seconds
+    - /usr/local/Cellar/macvim # /8.1-161 # 37.4MB, built in 2 minutes 5 seconds
+    - /usr/local/Cellar/pcre2  # /10.34   # 5.8MB, built in 1 minute 14 seconds
+    - /usr/local/Cellar/git
+
 before_cache:
   - which brew && brew cleanup # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
 
