--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ cache:
     - /usr/local/Cellar/python # /3.7.5   # 120.2MB, built in 3 minutes 43 seconds
     - /usr/local/Cellar/ruby   # /2.6.5   # 31.1MB, built in 5 minutes 27 seconds
     - /usr/local/Cellar/sqlite # /3.30.1  # 3.9MB, built in 1 minute 17 seconds
-    - /usr/local/Cellar/macvim # /8.1-161 # 37.4MB, built in 2 minutes 5 seconds
+    # - /usr/local/Cellar/macvim # /8.1-161 # 37.4MB, built in 2 minutes 5 seconds
     - /usr/local/Cellar/pcre2  # /10.34   # 5.8MB, built in 1 minute 14 seconds
     - /usr/local/Cellar/git
 
