--- a/.travis.yml
+++ b/.travis.yml
@@ -21,18 +21,15 @@ cache:
   directories:
     - $TRAVIS_BUILD_DIR/spec/support/vim_plugins
     - $HOME/.rvm
-
     # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
     - $HOME/Library/Caches/Homebrew
     - /usr/local/Homebrew
-
     # - /usr/local/Cellar/python # /3.7.5   # 120.2MB, built in 3 minutes 43 seconds
     # - /usr/local/Cellar/ruby   # /2.6.5   # 31.1MB, built in 5 minutes 27 seconds
     # - /usr/local/Cellar/sqlite # /3.30.1  # 3.9MB, built in 1 minute 17 seconds
     # - /usr/local/Cellar/pcre2  # /10.34   # 5.8MB, built in 1 minute 14 seconds
     # - /usr/local/Cellar/git
     # # - /usr/local/Cellar/macvim # /8.1-161 # 37.4MB, built in 2 minutes 5 seconds
-
     # - /usr/local/opt/python/lib
     # - /usr/local/opt/ruby/lib
     # - /usr/local/opt/sqlite/lib
@@ -42,7 +39,7 @@ cache:
 
 before_install:
   - sudo rm -rf /usr/local/Homebrew/Library/Taps/homebrew/homebrew-cask
-
+  - [ "$TRAVIS_OS_NAME" = "osx" ] && rvm install 2.6.5 --binary --fuzzy
   # - brew update --verbose
   # - test -d /usr/local/opt/python/lib || { rmdir /usr/local/opt/python ; brew install python }
   # - test -d /usr/local/opt/ruby/lib   || { rmdir /usr/local/opt/ruby ; brew install ruby     }
@@ -50,11 +47,6 @@ before_install:
   # - test -d /usr/local/opt/pcre2/lib  || { rmdir /usr/local/opt/pcre2 ; brew install pcre2   }
   # - test -d /usr/local/opt/git/lib    || { rmdir /usr/local/opt/git ; brew install git       }
   # - test -d /usr/local/opt/macvim/lib || { rmdir /usr/local/opt/macvim ; brew install macvim }
-
-  - wget https://github.com/macvim-dev/macvim/releases/download/snapshot-161/MacVim.dmg -P /tmp
-  - hdiutil attach /tmp/MacVim.dmg
-  - sudo cp -R /Volumes/MacVim/MacVim.app /Volumes/MacVim/Applications
-  - hdiutil detach /Volumes/MacVim
 before_cache:
   - which brew && brew cleanup # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
 
@@ -87,23 +79,23 @@ after_failure:
 
 jobs:
   include:
-    - name: 'Test acceptance of #backend#system'
+    - name: 'Acceptances tests of #backend#system'
       script: bundle exec rspec --tag system
       os: osx
-    - name: 'Test acceptance of #backend#vim8'
+    - name: 'Acceptances tests of #backend#vim8'
       script: bundle exec rspec --tag vim8
       os: osx
-    - name: 'Test acceptance of #backend#vimproc'
+    - name: 'Acceptances tests of #backend#vimproc'
       script: bundle exec rspec --tag vimproc --seed 53149
       os: osx
 
-    - name: 'Test acceptance of #backend#system'
+    - name: 'Acceptances tests of #backend#system'
       script: bundle exec rspec --tag system
       os: linux
-    - name: 'Test acceptance of #backend#vim8'
+    - name: 'Acceptances tests of #backend#vim8'
       script: bundle exec rspec --tag vim8
       os: linux
-    - name: 'Test acceptance of #backend#vimproc'
+    - name: 'Acceptances tests of #backend#vimproc'
       script: bundle exec rspec --tag vimproc
       os: linux
 
