--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,10 @@ cache:
 
 install:
   - |
-    sh spec/support/bin/install_vim_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
     bundle install
+    [ "$LINT_ONLY" = true ] && exit
 
+    sh spec/support/bin/install_vim_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
     if [ "$TRAVIS_OS_NAME" = "osx" ]; then
       sh spec/support/bin/install_osx.sh
       mvim --version
@@ -61,26 +62,31 @@ after_failure:
 
 jobs:
   include:
-    - name: 'Acceptances tests of #backend#system'
-      script: bundle exec rspec --tag system
-      os: osx
-    - name: 'Acceptances tests of #backend#vim8'
-      script: bundle exec rspec --tag vim8
-      os: osx
-    - name: 'Acceptances tests of #backend#vimproc'
-      script: bundle exec rspec --tag vimproc --seed 53149
-      os: osx
+    # - name: 'Acceptances tests of #backend#system'
+    #   script: bundle exec rspec --tag system
+    #   os: osx
+    # - name: 'Acceptances tests of #backend#vim8'
+    #   script: bundle exec rspec --tag vim8
+    #   os: osx
+    # - name: 'Acceptances tests of #backend#vimproc'
+    #   script: bundle exec rspec --tag vimproc --seed 53149
+    #   os: osx
 
-    - name: 'Acceptances tests of #backend#system'
-      script: bundle exec rspec --tag system
-      os: linux
-    - name: 'Acceptances tests of #backend#vim8'
-      script: bundle exec rspec --tag vim8
-      os: linux
-    - name: 'Acceptances tests of #backend#vimproc'
-      script: bundle exec rspec --tag vimproc
-      os: linux
+    # - name: 'Acceptances tests of #backend#system'
+    #   script: bundle exec rspec --tag system
+    #   os: linux
+    # - name: 'Acceptances tests of #backend#vim8'
+    #   script: bundle exec rspec --tag vim8
+    #   os: linux
+    # - name: 'Acceptances tests of #backend#vimproc'
+    #   script: bundle exec rspec --tag vimproc
+    #   os: linux
 
-    - name: 'Unit tests'
-      script: bundle exec rspec --tag ~backend
+    # - name: 'Unit tests'
+    #   script: bundle exec rspec --tag ~backend
+    #   os: linux
+
+    - name: 'Lint'
+      script: bundle exec rubocop --display-cop-names
+      env: LINT_ONLY=true
       os: linux
