--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,11 @@ env: DISPLAY=":99.0" HOMEBREW_NO_AUTO_UPDATE=1
 
 # https://docs.travis-ci.com/user/reference/osx/#ruby-versionsimplementations
 # https://docs.travis-ci.com/user/reference/xenial/#ruby-support
-rvm: 2.2.5
+rvm: 2.3
 language: ruby
 
+before_cache:
+  - which brew && brew cleanup # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
 cache:
   bundler: true
   apt: true
@@ -25,13 +27,10 @@ cache:
     - $HOME/Library/Caches/Homebrew
     - /usr/local/Homebrew
 
-  before_install:
-    - |
-      sudo rm -rf /usr/local/Homebrew/Library/Taps/homebrew/homebrew-cask
-      [ "$TRAVIS_OS_NAME" = "osx" ] && rvm install 2.6.5 --binary --fuzzy # for macvim
-  before_cache:
-    - which brew && brew cleanup # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
-
+before_install:
+  - |
+    sudo rm -rf /usr/local/Homebrew/Library/Taps/homebrew/homebrew-cask
+    [ "$TRAVIS_OS_NAME" = "osx" ] && rvm install 2.6.5 --binary --fuzzy # for macvim
 install:
   - |
     bundle install
@@ -62,29 +61,29 @@ after_failure:
 
 jobs:
   include:
-    # - name: 'Acceptances tests of #backend#system'
-    #   script: bundle exec rspec --tag system
-    #   os: osx
-    # - name: 'Acceptances tests of #backend#vim8'
-    #   script: bundle exec rspec --tag vim8
-    #   os: osx
-    # - name: 'Acceptances tests of #backend#vimproc'
-    #   script: bundle exec rspec --tag vimproc --seed 53149
-    #   os: osx
+    - name: 'Acceptances tests of #backend#system'
+      script: bundle exec rspec --tag system
+      os: osx
+    - name: 'Acceptances tests of #backend#vim8'
+      script: bundle exec rspec --tag vim8
+      os: osx
+    - name: 'Acceptances tests of #backend#vimproc'
+      script: bundle exec rspec --tag vimproc --seed 53149
+      os: osx
 
-    # - name: 'Acceptances tests of #backend#system'
-    #   script: bundle exec rspec --tag system
-    #   os: linux
-    # - name: 'Acceptances tests of #backend#vim8'
-    #   script: bundle exec rspec --tag vim8
-    #   os: linux
-    # - name: 'Acceptances tests of #backend#vimproc'
-    #   script: bundle exec rspec --tag vimproc
-    #   os: linux
+    - name: 'Acceptances tests of #backend#system'
+      script: bundle exec rspec --tag system
+      os: linux
+    - name: 'Acceptances tests of #backend#vim8'
+      script: bundle exec rspec --tag vim8
+      os: linux
+    - name: 'Acceptances tests of #backend#vimproc'
+      script: bundle exec rspec --tag vimproc
+      os: linux
 
-    # - name: 'Unit tests'
-    #   script: bundle exec rspec --tag ~backend
-    #   os: linux
+    - name: 'Unit tests'
+      script: bundle exec rspec --tag ~backend
+      os: linux
 
     - name: 'Lint'
       script: bundle exec rubocop --display-cop-names
