--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ cache:
 
 before_install:
   # https://docs.travis-ci.com/user/languages/ruby/#bundler-20
-  - yes | gem update --system --force`
+  - yes | gem update --system --force
   - gem install bundler
   # - |
   #   sudo rm -rf /usr/local/Homebrew/Library/Taps/homebrew/homebrew-cask
