--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ before_install:
 install:
   - |
     bundle install
+
     if [ "$LINT_ONLY" = true ] ; then
       pip3 install --user vim-vint==0.3.21
       return
@@ -97,4 +98,5 @@ jobs:
         - bundle exec rubocop --display-cop-names
         - vint autoload nerdtree_plugin plugin syntax
       env: LINT_ONLY=true
+      python: 3.7
       os: linux
