--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ services:
   - xvfb
 env: DISPLAY=":99.0" HOMEBREW_NO_AUTO_UPDATE=1
 
+# From log file: The `pip3' command exists in these Python versions: 3.6.7, 3.7, 3.7.1
+python: 3.7
 # https://docs.travis-ci.com/user/reference/osx/#ruby-versionsimplementations
 # https://docs.travis-ci.com/user/reference/xenial/#ruby-support
 rvm: 2.3.8
@@ -98,5 +100,4 @@ jobs:
         - bundle exec rubocop --display-cop-names
         - vint autoload nerdtree_plugin plugin syntax
       env: LINT_ONLY=true
-      python: 3.7
       os: linux
