try another python version

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 env: DISPLAY=":99.0" HOMEBREW_NO_AUTO_UPDATE=1
 
 # From log file: The `pip3' command exists in these Python versions: 3.6.7, 3.7, 3.7.1
-python: 3.7
+python: 3.4
 # https://docs.travis-ci.com/user/reference/osx/#ruby-versionsimplementations
 # https://docs.travis-ci.com/user/reference/xenial/#ruby-support
 rvm: 2.3.8
@@ -42,7 +42,7 @@ install:
     bundle install
 
     if [ "$LINT_ONLY" = true ] ; then
-      pip3 install --user vim-vint==0.3.21
+      pip install --user vim-vint==0.3.21
       return
     fi
 
@@ -99,7 +99,5 @@ jobs:
       script:
         - bundle exec rubocop --display-cop-names
         - vint autoload nerdtree_plugin plugin syntax
-
-      language: python
       env: LINT_ONLY=true
       os: linux
