--- a/.travis.yml
+++ b/.travis.yml
@@ -37,12 +37,10 @@ before_install:
   #   [ "$TRAVIS_OS_NAME" = "osx" ] && rvm install 2.6.5 --binary --fuzzy # for macvim
 install:
   - |
-    bundle install
+    [ "$LINTER" = vint ] && pip3 install --user vim-vint==0.3.21 && return
+    [ "$LINTER" = rubocop ] && bundle install && return
 
-    if [ ! -z "$LINTER" ] ; then
-      [ "$LINTER" = vint ] && pip3 install --user vim-vint==0.3.21
-      return
-    fi
+    bundle install
 
     sh spec/support/bin/install_vim_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
     if [ "$TRAVIS_OS_NAME" = "osx" ]; then
@@ -69,29 +67,29 @@ after_failure:
 
 jobs:
   include:
-    - name: 'Acceptances tests of #backend#system'
-      script: bundle exec rspec --tag system
-      os: osx
-    - name: 'Acceptances tests of #backend#vim8'
-      script: bundle exec rspec --tag vim8
-      os: osx
-    - name: 'Acceptances tests of #backend#vimproc'
-      script: bundle exec rspec --tag vimproc --seed 53149
-      os: osx
+    # - name: 'Acceptances tests of #backend#system'
+    #   script: bundle exec rspec --tag system
+    #   os: osx
+    # - name: 'Acceptances tests of #backend#vim8'
+    #   script: bundle exec rspec --tag vim8
+    #   os: osx
+    # - name: 'Acceptances tests of #backend#vimproc'
+    #   script: bundle exec rspec --tag vimproc --seed 53149
+    #   os: osx
 
-    - name: 'Acceptances tests of #backend#system'
-      script: bundle exec rspec --tag system
-      os: linux
-    - name: 'Acceptances tests of #backend#vim8'
-      script: bundle exec rspec --tag vim8
-      os: linux
-    - name: 'Acceptances tests of #backend#vimproc'
-      script: bundle exec rspec --tag vimproc
-      os: linux
+    # - name: 'Acceptances tests of #backend#system'
+    #   script: bundle exec rspec --tag system
+    #   os: linux
+    # - name: 'Acceptances tests of #backend#vim8'
+    #   script: bundle exec rspec --tag vim8
+    #   os: linux
+    # - name: 'Acceptances tests of #backend#vimproc'
+    #   script: bundle exec rspec --tag vimproc
+    #   os: linux
 
-    - name: 'Unit tests'
-      script: bundle exec rspec --tag ~backend
-      os: linux
+    # - name: 'Unit tests'
+    #   script: bundle exec rspec --tag ~backend
+    #   os: linux
 
     - name: 'Rubocop'
       script: bundle exec rubocop --display-cop-names
